kubernetes/apps/security/authentik/app/referencegrant.yaml
---
apiVersion: gateway.networking.k8s.io/v1beta1
kind: ReferenceGrant
metadata:
  name: authentik-ext-auth
spec:
  from:
    - group: gateway.envoyproxy.io
      kind: SecurityPolicy
      namespace: downloads
    - group: gateway.envoyproxy.io
      kind: SecurityPolicy
      namespace: media
    - group: gateway.envoyproxy.io
      kind: SecurityPolicy
      namespace: services
    - group: gateway.envoyproxy.io
      kind: SecurityPolicy
      namespace: observability
    - group: gateway.envoyproxy.io
      kind: SecurityPolicy
      namespace: home
    - group: gateway.envoyproxy.io
      kind: SecurityPolicy
      namespace: default
  to:
    - group: ""
      kind: Service
      name: authentik-server
